--- a/client/scss/base/icons.scss
+++ b/client/scss/base/icons.scss
@@ -13,24 +13,11 @@
     fill: none;
   }
 
-  &.is-16 {
-    width: 16px;
-    height: 16px;
-  }
-  
-  &.is-18 {
-    width: 18px;
-    height: 18px;
-  }
-
-  &.is-20 {
-    width: 20px;
-    height: 20px;
-  }
-
-  &.is-24 {
-    width: 24px;
-    height: 24px;
+  @each $size in 16,18,20,24,48,64,96,128 {
+    &.is-#{$size} {
+      width: #{$size}px;
+      height: #{$size}px;
+    }
   }
 
   &.has-right-pad {
