--- a/client/scss/components/panel.scss
+++ b/client/scss/components/panel.scss
@@ -32,8 +32,8 @@
     &.is-featured {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
-      background-color: mc('indigo', '400');
-      border-bottom-color: mc('indigo', '500');
+      background-color: mc('blue', '700');
+      border-bottom-color: mc('blue', '900');
       color: #FFF;
 
       > i::before {
