--- a/client/scss/components/form.scss
+++ b/client/scss/components/form.scss
@@ -36,7 +36,11 @@
     &.is-dirty.is-invalid {
       border-color: mc('red', '500');
       box-shadow: inset 0 0 5px 0 mc('red', '100');
-    }
+		}
+		
+		@include placeholder {
+			color: mc('grey', '400');
+		}
 
 	}
 
@@ -44,6 +48,36 @@
 
 		input[type=text], input[type=password], select, textarea {
 			width: 100%;
+		}
+
+	}
+
+	textarea {
+		background-color: #FFF;
+		display: flex;
+		padding: 6px 12px;
+		border: 1px solid mc('grey', '400');
+		border-radius: 3px;
+		font-family: $core-font-standard;
+		font-size: 14px;
+		color: mc('grey', '700');
+		transition: all .4s ease;
+		box-shadow: inset 0 0 5px 0 rgba(0,0,0,0.1);
+		min-height: 100px;
+
+		&:focus {
+			outline: none;
+			border-color: mc('light-blue', '500');
+			box-shadow: inset 0 0 5px 0 rgba(mc('light-blue', '500'), 0.3);
+		}
+
+		&:disabled {
+			background-color: mc('grey', '100');
+		}
+
+    &.is-dirty.is-invalid {
+      border-color: mc('red', '500');
+      box-shadow: inset 0 0 5px 0 mc('red', '100');
 		}
 
 	}
