change to relative addressing

--- a/server/views/auth/login.pug
+++ b/server/views/auth/login.pug
@@ -18,8 +18,8 @@ html(data-logic='login')
     link(rel='manifest', href='/manifest.json')
 
     // JS / CSS
-    script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
-    script(type='text/javascript', src=appconfig.host + '/js/app.js')
+    script(type='text/javascript', src='/js/vendor.js')
+    script(type='text/javascript', src='/js/app.js')
 
   body
     #bg
