--- a/client/scss/components/panel.scss
+++ b/client/scss/components/panel.scss
@@ -33,13 +33,19 @@
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
       background-color: mc('blue', '700');
+      background-image: linear-gradient(to bottom, mc('blue', '700') 0%, mc('blue', '800') 100%);
       border-bottom-color: mc('blue', '900');
+      box-shadow: inset 0 0 0 1px mc('blue', '600'), inset 0 0 0px 2px rgba(mc('blue', '800'), .5);
       color: #FFF;
 
       > i::before {
         @include spinner(#FFF, 0.4s, 18px);
       }
 
+    }
+
+    & + .panel-content {
+      box-shadow: inset 0 0 0 1px #FFF, inset 0 30px 80px -25px mc('blue', '100');
     }
 
     > span {
