--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -16,7 +16,6 @@ $primary: 'indigo';
 @import 'components/button';
 @import 'components/collapsable-nav';
 @import 'components/color-picker';
-@import 'components/config-manager';
 @import 'components/footer';
 @import 'components/form';
 @import 'components/grid';
@@ -27,6 +26,7 @@ $primary: 'indigo';
 @import 'components/nav';
 @import 'components/panel';
 @import 'components/search';
+@import 'components/setup';
 @import 'components/sidebar';
 @import 'components/table';
 @import 'components/toggle';
