feat: login component, icon svg symbols, project structure

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -3,7 +3,7 @@
 $primary: 'indigo';
 
 @import "base/variables";
-@import "base/colors";
+@import "base/material";
 @import "base/reset";
 @import "base/mixins";
 @import "base/fonts";
@@ -21,9 +21,11 @@ $primary: 'indigo';
 @import 'components/grid';
 @import 'components/hero';
 @import 'components/history';
+@import 'components/login';
 @import 'components/markdown-content';
 @import 'components/modal';
 @import 'components/nav';
+@import 'components/navigator';
 @import 'components/panel';
 @import 'components/search';
 @import 'components/setup';
@@ -32,9 +34,7 @@ $primary: 'indigo';
 @import 'components/toggle';
 @import 'components/typography';
 
-@import 'libs/nucleo-icons';
 @import 'libs/twemoji-awesome';
-@import 'libs/jquery-contextmenu';
 @import 'node_modules/highlight.js/styles/atom-one-dark';
 @import 'node_modules/simplemde/dist/simplemde.min';
 @import 'node_modules/diff2html/dist/diff2html.min';
@@ -44,7 +44,5 @@ $primary: 'indigo';
 @import 'layout/_header';
 @import 'layout/_loader';
 @import 'layout/_rtl';
-
-@import 'pages/login';
 
 @import 'base/print';
