--- a/client/scss/components/login.scss
+++ b/client/scss/components/login.scss
@@ -1,16 +1,22 @@
 .login {
-  background-color: #0288d1;
+  background-color: mc('blue', '800');
   background-image: url('../svg/login-bg-motif.svg');
   background-repeat: repeat;
-  background-size: 30%;
+  background-size: 200px;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: loginBgReveal 20s linear infinite;
 
-  &.is-error {
-    background-image: linear-gradient(to right, mc('red', '400'), mc('red', '600'));
+  @include keyframes(loginBgReveal) {
+    0% {
+      background-position-y: 0;
+    }
+    100% {
+      background-position-y: -800px;
+    }
   }
 
   &::before {
@@ -23,6 +29,20 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+
+    @include until($tablet) {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    background-image: linear-gradient(to bottom, rgba(mc('blue', '800'), 1) 0%, rgba(mc('blue', '800'), 0) 100%);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 25vh;
   }
 
   &-container {
@@ -32,6 +52,7 @@
     align-items: stretch;
     box-shadow: 0 14px 28px rgba(0,0,0,0.2);
     border-radius: 6px;
+    animation: zoomIn .5s ease;
 
     &.is-expanded {
       width: 650px;
@@ -39,42 +60,20 @@
       .login-frame {
         border-radius: 0 6px 6px 0;
         border-left: none;
+
+        @include until($tablet) {
+          border-radius: 0;
+        }
       }
     }
 
     @include until($tablet) {
-      width: 350px;
+      width: 100%;
+      border-radius: 0;
 
       &.is-expanded {
-        width: 400px;
+        width: 100%;
       }
-    }
-  }
-
-  &-error {
-    position: absolute;
-    bottom: 105%;
-    width: 100%;
-    min-height: 50px;
-    background-image: radial-gradient(ellipse at top left, rgba(255,255,255,.9) 0%,rgba(255,255,255,.8) 100%);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    border-radius: 6px;
-    color: mc('red', '800');
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-
-    strong {
-      font-weight: 600;
-      text-transform: uppercase;
-      display: block;
-      padding: 0 1rem 0 0;
-      border-right: 1px solid mc('red', '200');
-    }
-    span {
-      padding: 0 0 0 1rem;
-      display: block;
     }
   }
 
@@ -90,15 +89,18 @@
 
     @include until($tablet) {
       width: 50px;
+      border-radius: 0;
     }
 
     button {
-      flex: 1 1;
+      flex: 0 1 50px;
       padding: 5px 15px;
       border: none;
       color: #FFF;
-      background: linear-gradient(to right, rgba(mc('light-blue', '800'), .7), rgba(mc('light-blue', '800'), 1));
-      border-top: 1px solid rgba(mc('light-blue', '900'), .5);
+      // background: linear-gradient(to right, rgba(mc('light-blue', '800'), .7), rgba(mc('light-blue', '800'), 1));
+      // border-top: 1px solid rgba(mc('light-blue', '900'), .5);
+      background: linear-gradient(to right, rgba(0,0,0, .5), rgba(0,0,0, .7));
+      border-top: 1px solid rgba(0,0,0, .2);
       font-family: $core-font-standard;
       font-weight: 600;
       text-align: left;
@@ -117,7 +119,7 @@
       }
 
       &:hover {
-        background-color: mc('light-blue', '900');
+        background-color: rgba(0,0,0, .4);
       }
 
       &:first-child {
@@ -130,7 +132,7 @@
 
       &.is-active {
         background-image: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,.77) 100%);
-        color: mc('light-blue', '700');
+        color: mc('grey', '800');
         cursor: default;
 
         &:hover {
@@ -138,7 +140,7 @@
         }
 
         svg path {
-          fill: mc('light-blue', '800');
+          fill: mc('grey', '800');
         }
       }
 
@@ -177,6 +179,11 @@
         }
       }
     }
+
+    &-fill {
+      flex: 1 1 0;
+      background: linear-gradient(to right, rgba(mc('light-blue', '800'), .7), rgba(mc('light-blue', '800'), 1));
+    }
   }
 
   &-frame {
@@ -192,7 +199,9 @@
     text-align: center;
 
     @include until($tablet) {
-      width: 350px;
+      width: 100%;
+      border-radius: 0;
+      border: none;
     }
 
     h1 {
@@ -220,7 +229,7 @@
 
     input[type=text], input[type=password] {
       width: 100%;
-      border: 1px solid #FFF;
+      border: 1px solid rgba(mc('light-blue','500'), .5);
       border-radius: 3px;
       background-color: rgba(255,255,255,.9);
       box-shadow: inset 0 0 0 3px rgba(255,255,255, .25);
@@ -237,10 +246,20 @@
         outline: none;
         border-color: mc('light-blue','500');
         background-color: rgba(255,255,255,1);
-        box-shadow: inset 0 0 0 3px rgba(mc('light-blue','500'), .25);
+        box-shadow: inset 0 0 8px rgba(mc('light-blue','500'), .5);
         color: mc('light-blue', '800');
       }
 
+    }
+
+    .button {
+      background-image: linear-gradient(to top, mc('deep-orange', '400') 0%, mc('deep-orange', '400') 50%, mc('orange', '500') 100%);
+      background-repeat: no-repeat;
+      background-size: 100% 200%;
+
+      &:hover {
+        background-position-y: 100%;
+      }
     }
 
   }
@@ -259,8 +278,16 @@
 
     a {
       font-weight: 600;
-      color: mc('light-blue', '500');
+      color: mc('blue', '500');
       margin-left: .25rem;
+
+      @include until($tablet) {
+        color: mc('blue', '200');
+      }
+    }
+
+    @include until($tablet) {
+      color: mc('blue', '50');
     }
 
   }
